fixed food fact spacing

--- a/assets/css/mainstyle.css
+++ b/assets/css/mainstyle.css
@@ -71,7 +71,7 @@ font-size: 30px;
    max-width: 70%;
     float: left;
     margin-left: 10px;
-    max-height: 30%;
+    max-height: 20%;
 }
 
 .row:after {
